# mlops-lab

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  dvc.yaml  main.py  mlflow.db  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cml.yaml  main.yaml
config/: config.yaml
config/hpo/: grid.yaml  optuna.yaml  random.yaml
config/model/: logistic_regression.yaml  random_forest.yaml
dags/: ml_training_pipeline.py
data/: .gitignore  processed.dvc
data/raw/: dataset.csv.dvc
mlartifacts/2/0b2d0bd7e9764775b7c4b3897b0c82db/artifacts/: config.json
mlartifacts/2/19d4d2ca620a428c89991a747f0b17c4/artifacts/: best_params.json  config.json
mlartifacts/2/21e8468aa1e44d25ac960ed99afbfbbd/artifacts/: best_model.pkl  best_params.json  config.json
mlartifacts/2/2b6a3681ff714b67bdfe291b95c0bcc7/artifacts/: best_model.pkl  best_params.json  config.json
mlartifacts/2/66f34c5a5bb0494d903a54d5256dba53/artifacts/: best_params.json  config.json
mlartifacts/2/f809430b8ca3450fac696c3fced18c03/artifacts/: best_model.pkl  best_params.json  config.json
notebooks/: 01_eda.ipynb  test.ipynb
src/: compare_metrics.py  download.py  notmycode.py  optimize.py  prepare.py  register_model.py  train.py
tests/: test_data.py  test_model.py
